# backend

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
BitRateAndZip/: Real_Slim_Shady.mp3:Zone.Identifier  Real_Slim_Shady.mp3Zone.Identifier  chopin_nocturne_9.mp3:Zone.Identifier  chopin_nocturne_9.mp3Zone.Identifier  compress  compress.cpp  mp3_to_binary  mp3_to_binary.cpp  ogg_to_mp3
Ogg/: audio_compress  audio_compress.cpp  mp3_to_pcm  mp3_to_pcm.cpp  ogg_to_mp3  ogg_to_mp3.cpp
Roslan/: decoding.cpp  encoding_with_zip.cpp
api/: CMakeLists.txt  openapi.yaml
api/configs/: static_config.yaml
api/src/: main.cpp
api/src/handlers/v1/audio-compressor/: view.cpp
cmake/: FindLAME.cmake  FindMPG.cmake
configs/: static_config.yaml
current/: Winter.mp3output.mp3Low  getMp3BitRate.cpp  getbit  inplace  inplace_converter.cpp  inplace_converter_recent.cpp
old/: converter.cpp  mp3tomp3.cpp  toogg.cpp  topcm.cpp  wavToPcm.cpp
src/: main.cpp
src/handlers/v1/audio-compressor/: view.cpp  view.hpp
src/monitoring/health_checker/: health_checker.cpp  health_checker.hpp
src/utils/: inplace_converter.cpp  inplace_converter.hpp  lru_cache.hpp  shazam_api.cpp  shazam_api.hpp
